--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 
   <dependencies>
 
-
     <!-- JUnit (テストのため) -->
     <dependency>
       <groupId>junit</groupId>
@@ -42,6 +41,11 @@
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>42.6.0</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
 
   </dependencies>
