--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=adgjmptw0908
 logging.level.org.springframework.web=DEBUG
 logging.level.com.example.demo=DEBUG
 logging.level.com=DEBUG
+logging.level.org.springframework.security=DEBUG
