--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/nutrition_app
 spring.datasource.username=postgres
 spring.datasource.password=adgjmptw0908
+spring.jpa.hibernate.ddl-auto=update
+
 
 
 logging.level.org.springframework.web=DEBUG
