--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,12 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
     </dependency>
-  
+
+    <dependency>
+          <groupId>jakarta.persistence</groupId>
+          <artifactId>jakarta.persistence-api</artifactId>
+    </dependency>
+      
   </dependencies>
 
   <build>
