--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ logging.level.org.springframework.web=DEBUG
 logging.level.com.example.demo=DEBUG
 logging.level.com=DEBUG
 logging.level.org.springframework.security=DEBUG
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
