--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
           <groupId>jakarta.persistence</groupId>
           <artifactId>jakarta.persistence-api</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+  </dependency>
       
   </dependencies>
 
