--- a/pom.xml
+++ b/pom.xml
@@ -84,9 +84,10 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
       <scope>provided</scope>
   </dependency>
-      
+  
   </dependencies>
 
   <build>
