--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,21 @@
       <scope>test</scope>
   </dependency>
 
+  <!-- Mockito -->
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>3.8.0</version>
+    <scope>test</scope>
+</dependency>
+
+<!-- Spring Boot Test Starter -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
+</dependency>
+
 
     <!-- Spring Boot Starter for JPA -->
     <dependency>
@@ -59,6 +74,13 @@
         <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+  </dependency>
+
   
     <dependency>
       <groupId>org.springframework.security</groupId>
@@ -79,6 +101,18 @@
           <groupId>jakarta.persistence</groupId>
           <artifactId>jakarta.persistence-api</artifactId>
     </dependency>
+
+    <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>2.0.1.Final</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.hibernate.validator</groupId>
+        <artifactId>hibernate-validator</artifactId>
+    </dependency>
+
       
 
   </dependencies>
