--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 
   <dependencies>
 
+  <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+  </dependency>
+
+
   <!-- Spring Boot Test -->
   <dependency>
       <groupId>org.springframework.boot</groupId>
